refactor(client): comment out attribution

--- a/SharedShoppingList.Client/src/app/app.component.html
+++ b/SharedShoppingList.Client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 <!-- TODO: move credit to footer/credit page-->
-<div class="credit">
+<!-- <div class="credit">
   <a href="https://www.flaticon.com/free-icons/supermarket" title="supermarket icons">Supermarket icons created by
     Freepik
     - Flaticon</a>
-</div>
+</div> -->
