--- a/SharedShoppingList.Client/src/app/components/login/login.component.html
+++ b/SharedShoppingList.Client/src/app/components/login/login.component.html
@@ -1,29 +1,31 @@
 <div class="flex justify-content-center align-items-center h-screen">
-    <div class="card surface-card p-4 shadow-2 border-round w-full md:w-6">
+    <div class="card surface-card p-4 shadow-2 border-round w-full md:w-7 lg:w-5">
         <div class="text-center mb-5">
             <div class="logo-container flex justify-content-center align-items-center mb-3">
                 <img src="assets/images/shopping-cart.png" alt="Shopping cart" class="logo">
             </div>
-            <div class="text-900 text-3xl font-medium">Welcome Back</div>
-            <span class="text-600 font-medium line-height-3">Don't have an account?</span>
-            <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create one today!</a>
+            <div class="text-900 text-3xl font-medium" translate>welcomeBack</div>
+            <span class="text-600 font-medium line-height-3" translate>noAccountQuestion</span>
+            <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer" translate>createAccountSuggestion</a>
         </div>
 
         <div>
-            <label for="username1" class="block text-900 font-medium mb-2">Username</label>
+            <label for="username1" class="block text-900 font-medium mb-2">{{'username' | translate |
+                titlecase}}</label>
             <input id="username1" type="text" pInputText class="w-full mb-3">
 
-            <label for="password1" class="block text-900 font-medium mb-2">Password</label>
+            <label for="password1" class="block text-900 font-medium mb-2">{{'password' | translate |
+                titlecase}}</label>
             <input id="password1" type="password" pInputText class="w-full mb-3">
 
             <div class="flex align-items-center justify-content-between mb-6">
                 <div class="flex align-items-center">
                     <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
-                    <label for="rememberme1" class="text-900">Remember me</label>
+                    <label for="rememberme1" class="text-900" translate>rememberMe</label>
                 </div>
             </div>
 
-            <button pButton pRipple label="Sign In" icon="pi pi-user" class="w-full"></button>
+            <button pButton pRipple label="{{'signIn' | translate}}" icon="pi pi-user" class="w-full"></button>
         </div>
     </div>
 </div>
