--- a/SharedShoppingList.Client/src/styles.scss
+++ b/SharedShoppingList.Client/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "colors";
 
 html {
   box-sizing: border-box;
@@ -12,4 +13,5 @@ html {
 body {
   margin: 0;
   padding: 0;
+  background-color: $surface-d;
 }
