--- a/SharedShoppingList.Client/src/app/components/login/login.component.html
+++ b/SharedShoppingList.Client/src/app/components/login/login.component.html
@@ -9,14 +9,14 @@
             <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer" translate>createAccountSuggestion</a>
         </div>
 
-        <div>
+        <form [formGroup]="form">
             <label for="username1" class="block text-900 font-medium mb-2">{{'username' | translate |
                 titlecase}}</label>
-            <input id="username1" type="text" pInputText class="w-full mb-3">
+            <input [formControl]="formControls.username" id="username1" type="text" pInputText class="w-full mb-3">
 
             <label for="password1" class="block text-900 font-medium mb-2">{{'password' | translate |
                 titlecase}}</label>
-            <input id="password1" type="password" pInputText class="w-full mb-3">
+            <input [formControl]="formControls.password" id="password1" type="password" pInputText class="w-full mb-3">
 
             <div class="flex align-items-center justify-content-between mb-6">
                 <div class="flex align-items-center">
@@ -25,7 +25,8 @@
                 </div>
             </div>
 
-            <button pButton pRipple label="{{'signIn' | translate}}" icon="pi pi-user" class="w-full"></button>
-        </div>
+            <button [disabled]="form.invalid || form.pristine" pButton pRipple label="{{'signIn' | translate}}"
+                icon="pi pi-user" class="w-full" (click)="signIn()"></button>
+        </form>
     </div>
 </div>
