feat(client): create logo component

--- a/SharedShoppingList.Client/src/app/components/login/login.component.html
+++ b/SharedShoppingList.Client/src/app/components/login/login.component.html
@@ -1,10 +1,8 @@
 <div class="flex justify-content-center align-items-center h-screen">
-    <div class="card surface-card p-4 shadow-2 border-round w-full md:w-7 lg:w-5">
+    <div class="card surface-card p-4 mx-2 shadow-2 border-round w-full md:w-7 lg:w-5">
         <div class="text-center mb-5">
-            <div class="logo-container flex justify-content-center align-items-center mb-3">
-                <img src="assets/images/shopping-cart.png" alt="Shopping cart" class="logo">
-            </div>
-            <div class="text-900 text-3xl font-medium" translate>welcomeBack</div>
+            <app-logo class="mx-auto"></app-logo>
+            <div class="text-900 text-3xl font-medium mt-3" translate>welcomeBack</div>
             <span class="text-600 font-medium line-height-3" translate>noAccountQuestion</span>
             <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer" translate>createAccountSuggestion</a>
         </div>
