style(client): configure height for main content

--- a/SharedShoppingList.Client/src/app/shared/common-ui/header/header.component.scss
+++ b/SharedShoppingList.Client/src/app/shared/common-ui/header/header.component.scss
@@ -1,7 +1,8 @@
 @import "colors";
+@import "variables";
 
 header {
-  height: 5rem;
+  height: $header-height;
   box-shadow: 0 0.15rem 0.15rem rgba(0, 0, 0, 0.4);
   clip-path: inset(0 0 -0.3rem 0);
   background-color: $blue-900;
