--- a/SharedShoppingList.Client/src/app/styles/variables.scss
+++ b/SharedShoppingList.Client/src/app/styles/variables.scss
@@ -6,3 +6,6 @@ $inline-spacing: 0.5rem;
 $border-radius: 3px;
 $maskbg: rgba(0, 0, 0, 0.4);
 $focus-ring: 0 0 0 1px #93cbf9;
+
+// Our variables
+$header-height: 5rem;
