--- a/SharedShoppingList.Client/src/app/app.component.html
+++ b/SharedShoppingList.Client/src/app/app.component.html
@@ -1,4 +1,9 @@
 <router-outlet></router-outlet>
+
+<!-- TODO: figure out how breakpoints work for the toast-->
+<p-toast position="bottom-center" [preventOpenDuplicates]="true">
+</p-toast>
+
 <!-- TODO: move credit to footer/credit page-->
 <!-- <div class="credit">
   <a href="https://www.flaticon.com/free-icons/supermarket" title="supermarket icons">Supermarket icons created by
