--- a/SharedShoppingList.Client/src/styles.scss
+++ b/SharedShoppingList.Client/src/styles.scss
@@ -1,20 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
 @import "colors";
 @import "variables";
+@import "primeNgOverrides";
 
 html {
   box-sizing: border-box;
   font-size: 16px;
+
+  body {
+    background-color: $surface-d;
+    color: $text-color;
+    font-family: $font-family;
+  }
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 * {
   box-sizing: inherit;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  background-color: $surface-d;
-  color: $text-color;
-  font-family: $font-family;
 }
