--- a/SharedShoppingList.Client/src/styles.scss
+++ b/SharedShoppingList.Client/src/styles.scss
@@ -8,7 +8,7 @@ html {
   font-size: 16px;
 
   body {
-    background-color: $surface-d;
+    background-color: $surface-ground;
     color: $text-color;
     font-family: $font-family;
   }
