--- a/SharedShoppingList.Client/src/app/components/sign-in-page/sign-in-page.component.html
+++ b/SharedShoppingList.Client/src/app/components/sign-in-page/sign-in-page.component.html
@@ -2,7 +2,7 @@
     <div class="card surface-card p-4 mx-2 shadow-2 border-round w-full md:w-7 lg:w-5">
         <div class="text-center mb-5">
             <app-logo class="mx-auto"></app-logo>
-            <div class="text-900 text-3xl font-medium mt-3" translate>welcomeBack</div>
+            <div class="text-900 text-3xl font-medium mt-3">{{'welcomeBack' | translate | capitalizeFirst}}</div>
             <span class="text-600 font-medium line-height-3" translate>noAccountQuestion</span>
             <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer" [routerLink]="['/', 'sign-up']"
                 translate>createAccountSuggestion</a>
@@ -10,11 +10,11 @@
 
         <form [formGroup]="form">
             <label for="username1" class="block text-900 font-medium mb-2">{{'username' | translate |
-                titlecase}}</label>
+                capitalizeFirst}}</label>
             <input [formControl]="formControls.username" id="username1" type="text" pInputText class="w-full mb-3">
 
             <label for="password1" class="block text-900 font-medium mb-2">{{'password' | translate |
-                titlecase}}</label>
+                capitalizeFirst}}</label>
             <input [formControl]="formControls.password" id="password1" type="password" pInputText class="w-full mb-3">
 
             <div class="flex align-items-center justify-content-between mb-6">
@@ -25,7 +25,7 @@
             </div>
 
             <button [disabled]="form.invalid || form.pristine" pButton pRipple
-                label="{{'signIn' | translate | titlecase}}" icon="pi pi-user" class="w-full"
+                label="{{'signIn' | translate | capitalizeFirst}}" icon="pi pi-user" class="w-full"
                 (click)="signIn()"></button>
         </form>
     </div>
