--- a/SharedShoppingList.Client/src/app/components/user-groups-page/user-groups-page.component.html
+++ b/SharedShoppingList.Client/src/app/components/user-groups-page/user-groups-page.component.html
@@ -3,8 +3,8 @@
     <ng-template pTemplate="header">
         <div class="header flex flex-row justify-content-between">
             <span class=" text-xl font-medium" translate>userGroups.listHeader</span>
-            <button pButton type="button" [label]="'createNew' | translate | titlecase" icon="pi pi-plus" iconPos="left"
-                class="p-button-success p-button-outlined p-button-sm"></button>
+            <button pButton type="button" [label]="'createNew' | translate | capitalizeFirst" icon="pi pi-plus"
+                iconPos="left" class="p-button-success p-button-outlined p-button-sm"></button>
         </div>
     </ng-template>
     <ng-template pTemplate="item" let-userGroup>
@@ -15,7 +15,7 @@
                 </p>
             </div>
             <div class="userGroupActions">
-                <button pButton type="button" [label]="'details' | translate | titlecase"
+                <button pButton type="button" [label]="'details' | translate | capitalizeFirst"
                     class="p-button-rounded p-button-sm"></button>
             </div>
         </div>
