feat(client): initialize UserGroup details page

--- a/SharedShoppingList.Client/src/app/components/user-group-details-page/user-group-details-page.component.html
+++ b/SharedShoppingList.Client/src/app/components/user-group-details-page/user-group-details-page.component.html
@@ -1,1 +1,8 @@
-<p>user-group-details-page works!</p>
+<p-tabView>
+    <p-tabPanel [header]="'userGroups.shoppingList' | translate | capitalizeFirst">
+        TODO
+    </p-tabPanel>
+    <p-tabPanel [header]="'userGroups.inviteCodes' | translate | capitalizeFirst" [disabled]="true">
+        TODO
+    </p-tabPanel>
+</p-tabView>
