feat(client): implement shopping list entry upsert

--- a/SharedShoppingList.Client/src/app/components/shopping-list/shopping-list.component.scss
+++ b/SharedShoppingList.Client/src/app/components/shopping-list/shopping-list.component.scss
@@ -1,11 +1,11 @@
 @import "colors";
 
-.user-group-container {
+.shopping-list-container {
   &:hover {
     background-color: $primary-900;
   }
 
-  .user-group-details {
+  .shopping-list-details {
     p {
       margin: 0;
     }
