--- a/SharedShoppingList.Client/src/app/components/user-groups-page/user-groups-page.component.html
+++ b/SharedShoppingList.Client/src/app/components/user-groups-page/user-groups-page.component.html
@@ -14,13 +14,13 @@
         </div>
     </ng-template>
     <ng-template pTemplate="item" let-userGroup>
-        <div class="userGroupContainer flex flex-row justify-content-between align-items-center p-3 m-2 border-round">
-            <div class="userGroupDetails flex flex-column justify-content-center">
+        <div class="user-group-container flex flex-row justify-content-between align-items-center p-3 m-2 border-round">
+            <div class="user-group-details flex flex-column justify-content-center">
                 <p class="text-l font-medium mb-1">{{userGroup.name}}</p>
                 <p class="text-sm text-color-secondary">{{userGroup.memberCount}} {{'userGroups.members' | translate}}
                 </p>
             </div>
-            <div class="userGroupActions">
+            <div class="user-group-actions">
                 <button pButton type="button" [label]="'details' | translate | capitalizeFirst"
                     (click)="navigateToUserGroupDetails(userGroup.id)" class="p-button-rounded p-button-sm"></button>
             </div>
