--- a/SharedShoppingList.Client/src/app/components/shopping-list/shopping-list.component.html
+++ b/SharedShoppingList.Client/src/app/components/shopping-list/shopping-list.component.html
@@ -1,5 +1,5 @@
 <!-- TODO: figure out a workaround to achieve responsive height. If not possible, adjust height for demo. -->
-<p-virtualScroller [value]="items" scrollHeight="400px" [itemSize]="76" class="border-round">
+<p-virtualScroller [value]="items" scrollHeight="400px" [itemSize]="61" class="border-round">
     <ng-template pTemplate="header">
         <div class="header">
             <div class="header-actions flex justify-content-end">
@@ -26,3 +26,6 @@
         </div>
     </ng-template>
 </p-virtualScroller>
+
+<p-confirmDialog [header]="'confirmRemoval' | translate | capitalizeFirst" icon="pi pi-exclamation-triangle">
+</p-confirmDialog>
