--- a/SharedShoppingList.Client/src/app/components/user-group-details-page/user-group-details-page.component.html
+++ b/SharedShoppingList.Client/src/app/components/user-group-details-page/user-group-details-page.component.html
@@ -3,8 +3,8 @@
         <p-tabPanel [header]="'userGroups.shoppingList' | translate | capitalizeFirst">
             <app-shopping-list [groupId]="groupId"></app-shopping-list>
         </p-tabPanel>
-        <p-tabPanel [header]="'userGroups.inviteCodes' | translate | capitalizeFirst" [disabled]="true">
-            TODO
+        <p-tabPanel [header]="'userGroups.inviteCode' | translate | capitalizeFirst" [disabled]="false">
+            <app-invite-codes-list [groupId]="groupId"></app-invite-codes-list>
         </p-tabPanel>
     </p-tabView>
 </div>
