--- a/SharedShoppingList.Client/src/app/components/user-groups-page/user-groups-page.component.html
+++ b/SharedShoppingList.Client/src/app/components/user-groups-page/user-groups-page.component.html
@@ -18,7 +18,7 @@
             <div class="flex flex-column justify-content-center">
                 <span class="text-l font-medium mb-1">{{userGroup.name}}</span>
                 <span class="text-sm text-color-secondary">
-                    {{userGroup.memberCount}} {{'userGroups.members' | translate}}
+                    {{userGroup.memberCount}} {{'userGroups.membersLabel' | translate}}
                 </span>
             </div>
             <div class="user-group-actions">
